<resources>
    <string name="app_name">ServicesTest</string>

    <string name="activity_main_button_simple_service">Service</string>
    <string name="activity_main_button_foreground_service">Foreground Service</string>
    <string name="activity_main_button_intent_service">Intent Service</string>
    <string name="activity_main_button_job_dispatcher">Job Dispatcher</string>
    <string name="activity_main_button_job_intent_service">Job Intent Service</string>
    <string name="activity_main_button_alarm_manager">Alarm Manager</string>
    <string name="activity_main_button_work_manager">Work Manager</string>
</resources>